--- a/todo_app/pubspec.yaml
+++ b/todo_app/pubspec.yaml
@@ -9,11 +9,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_slidable: ^4.0.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  hive_generator: ^1.1.3
 
 flutter:
   uses-material-design: true
