--- a/todo_app/pubspec.yaml
+++ b/todo_app/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter_slidable: ^4.0.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
