--- a/ecommerce_app/pubspec.yaml
+++ b/ecommerce_app/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_nav_bar: ^5.0.7
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
@@ -19,4 +21,3 @@ flutter:
   uses-material-design: true
   assets:
     - lib/images/
-
