--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,12 @@ migrate_working_dir/
 *.iws
 .idea/
 
+# Firebase/Google API keys
+**/google-services.json
+**/GoogleService-Info.plist
+**/firebase.json
+**/firebase_options.dart
+
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
