--- a/login_app/pubspec.yaml
+++ b/login_app/pubspec.yaml
@@ -9,7 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^4.0.0
+  firebase_core:
+  firebase_auth:
 
 dev_dependencies:
   flutter_test:
