--- a/chat_app/pubspec.yaml
+++ b/chat_app/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^4.0.0
   firebase_auth: ^6.0.1
+  cloud_firestore: ^6.0.1
 
 dev_dependencies:
   flutter_test:
